[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name =  "exp"
authors = [
    {name = "Mats Wichmann", email = "mats@linux.com"},
]
description = "Experimental Python Project for testing github ops"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.8"
dynamic = ["version"]
